[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/Art/plain-light-grey-pressed.jpg" type="Texture" id=1]
[ext_resource path="res://Scenes/UIScenes/Pause_Menu.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/Kenney Mini Square.ttf"

[sub_resource type="DynamicFont" id=2]
size = 35
outline_color = Color( 0.964706, 0, 0, 1 )
extra_spacing_bottom = 10
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 25
outline_color = Color( 0.964706, 0, 0, 1 )
extra_spacing_bottom = 10
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 25
outline_color = Color( 0.964706, 0, 0, 1 )
extra_spacing_bottom = 10
font_data = SubResource( 1 )

[node name="Pause_Menu" type="Control"]
pause_mode = 2
margin_right = 330.0
margin_bottom = 450.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
light_mask = 16
margin_right = 330.0
margin_bottom = 450.0
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 330.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 2 )
text = "Pause"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 94.0
margin_right = 330.0
margin_bottom = 94.0

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
margin_left = 25.0
margin_top = 134.0
margin_right = 305.0
margin_bottom = 174.0
rect_min_size = Vector2( 280, 40 )
size_flags_horizontal = 4

[node name="Label" type="Label" parent="VBoxContainer/ResumeButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 4.0
custom_fonts/font = SubResource( 4 )
text = "Resume"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
margin_left = 25.0
margin_top = 214.0
margin_right = 305.0
margin_bottom = 254.0
rect_min_size = Vector2( 280, 40 )
size_flags_horizontal = 4

[node name="Label" type="Label" parent="VBoxContainer/OptionsButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 4.0
custom_fonts/font = SubResource( 3 )
text = "Options"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
margin_left = 25.0
margin_top = 294.0
margin_right = 305.0
margin_bottom = 334.0
rect_min_size = Vector2( 280, 40 )
size_flags_horizontal = 4

[node name="Label" type="Label" parent="VBoxContainer/MainMenuButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 4.0
custom_fonts/font = SubResource( 3 )
text = "Main Menu"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
